# writescore

./: .gitignore  .pre-commit-config.yaml  Brewfile  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  README.md  SECURITY.md  pyproject.toml
.bmad-core/: core-config.yaml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
.windsurf/rules/: 00-ruleset-overview.md  01-core-principles.md  02-tool-usage-guidelines.md  03-advanced-tooling.md  04-ai-workflow.md  04a-ai-workflow-examples.md  12-governance-quality.md  13-coding-standards.md  14-security-performance.md  15-implementation-guidelines.md  16-cascade-error-handling.md  17-build-vs-om-guideline.md  21-ticket-creation.md  22-ticket-structure.md  25-interview-ticket-templates.md  26-interview-assessment-structure.md  31-workflow.md  34-jira-markdown-reference.md  34a-atlassian-mcp-advanced.md  36-conventional-commits.md  37-confluence-formatting.md  40-workflow-standards.md  41-git-mcp-guidelines.md
.windsurf/workflows/: qa.md
docs/: CODEBASE-ANALYSIS.md  architecture.md  prd.md
docs/prd/: 1-goals-and-background-context.md  2-requirements.md  3-technical-assumptions.md  4-epic-list.md  5-epic-details.md  6-checklist-results-report.md  7-next-steps.md  index.md
docs/qa/gates/: 6.1-fix-installation-issues.yml  6.2-developer-environment-setup.yml  6.3-readme-requirements-troubleshooting.yml  6.4-ci-pipeline-improvements.yml  6.5-dependabot-security-settings.yml  6.6-readme-status-badges.yml  6.7-contributor-experience.yml  6.8-mypy-type-compliance.yml
docs/qa/proposals/: idiomLexicon.tsv
docs/qa/validations/: 6.8-mypy-type-compliance-validation.md  epic-6-dx-improvements-validation.md
docs/stories/: 1.1.enhanced-dimension-base.story.md  1.16.fix-dynamic-reporting-architecture.story.md  1.17.rename-to-writescore.story.md  1.2.dimension-registry.story.md  1.3.weight-validation-mediator.story.md  1.4.refactor-existing-dimensions.story.md  1.4a.split-multi-concern-dimensions.story.md  1.5.evidence-extraction-implementation-plan.story.md  2.1.figurative-language-dimension.story.md  2.1a.remediation-plan.story.md  2.2.pragmatic-markers-dimension.story.md  2.2a.expand-pragmatic-marker-lexicon.story.md  2.3.semantic-coherence-dimension.story.md  2.4.dimension-scoring-optimization.story.md  2.4a.refactor-transition-pragmatic-dimensions.story.md  2.4b.extract-ai-vocabulary-dimension.story.md  2.4c.implement-true-perplexity.story.md  2.4d.implement-scoring-helpers.story.md  2.5.percentile-anchored-scoring-parameters.story.md  2.6.expand-pragmatic-markers-lexicon.story.md  2.7.pretrained-stance-detection.story.md  2.8.advanced-pragmatic-markers-bilstm-crf.story.md  2.9.short-content-optimization.story.md  3.1.content-type-detection.story.md  3.2.content-aware-dimension-weighting.story.md  3.3.content-aware-scoring-thresholds.story.md  3.4.register-consistency-dimension.story.md  3.5.person-consistency-dimension.story.md  3.6.lexical-inflation-dimension.story.md  3.7.content-function-word-ratio.story.md  3.8.formulaic-language-appropriateness.story.md  4.1.repository-setup-source-migration.story.md  4.2.test-documentation-migration.story.md  4.3.cicd-release-automation.md  4.3.cicd-release-automation.story.md  5.1.modernize-readme-2025-best-practices.story.md  6.1.fix-installation-issues.story.md  6.2.developer-environment-setup.story.md  6.3.readme-requirements-troubleshooting.story.md  6.4.ci-pipeline-improvements.story.md  (+6 more)
scripts/: generate_validation_corpus.py
src/writescore/: __init__.py
src/writescore/cli/: args.py  formatters.py  main.py
src/writescore/core/: analysis_config.py  analyzer.py  dataset.py  deployment.py  dimension_loader.py  dimension_registry.py  distribution_analyzer.py  dynamic_reporter.py  interpretability.py  normality.py  parameter_derivation.py  parameter_loader.py  parameters.py  recalibration.py  results.py  validation.py  weight_mediator.py
src/writescore/data/: idiom_lexicon.json
src/writescore/dimensions/: advanced_lexical.py  ai_vocabulary.py  base.py  base_strategy.py  burstiness.py  figurative_language.py  formatting.py  lexical.py  perplexity.py  pragmatic_markers.py  predictability.py  readability.py  semantic_coherence.py  sentiment.py  structure.py  syntactic.py  transition_marker.py  voice.py
src/writescore/history/: __init__.py  tracker.py  trends.py
src/writescore/scoring/: __init__.py  domain_thresholds.py  dual_score.py  dual_score_calculator.py  score_normalization.py
src/writescore/utils/: __init__.py  pattern_matching.py  visualization.py
tests/: conftest.py  test_cli_refactoring_regression.py
tests/accuracy/: test_sampling_accuracy.py
tests/fixtures/: README.md  baseline_scores.json
tests/fixtures/.ai-analysis-history/: sample_human_text.history.json
tests/integration/: test_all_dimensions_config.py  test_backward_compatibility.py  test_base_compatibility.py  test_cli_modes.py  test_dimension_registration.py  test_environment.py  test_reporting_integration.py  test_scoring_regression.py  test_weight_distribution.py  test_weight_validation_integration.py
tests/performance/: test_gltr_performance.py  test_recalibration_robustness.py  test_scoring_optimization_validation.py  test_story_2_6_validation.py
tests/unit/cli/: test_args_modes.py  test_main_modes.py
tests/unit/core/: test_analysis_config.py  test_analyzer.py  test_dataset.py  test_deployment.py  test_dimension_enrichment.py  test_dimension_loader.py  test_dimension_registry.py  test_distribution_analyzer.py  test_dynamic_reporter.py  test_interpretability.py  test_normality.py  test_parameter_derivation.py  test_parameters.py  test_recalibration.py  test_validation.py  test_weight_mediator.py
tests/unit/dimensions/: test_advanced_lexical.py  test_advanced_lexical_modes.py  test_ai_vocabulary.py  test_base_analyzer.py  test_base_strategy.py  test_base_strategy_config.py  test_lexical.py  (+17 more)
tests/utils/: capture_baselines.py
(+19 files in other folders)
