[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "writescore"
version = "6.1.0"
description = "AI writing pattern analysis and scoring tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "BOHICA Labs"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "marko>=2.0.0",
    "nltk>=3.8",
    "spacy>=3.7.0",
    "textstat>=0.7.3",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "scipy>=1.11.0",
    "textacy>=0.13.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "psutil>=5.9.0",
    "ruff>=0.1.0",
]
semantic = [
    "sentence-transformers>=2.0.0",
]
ml = [
    "accelerate>=0.20.0",
    "datasets>=2.14.0",
]

[project.scripts]
writescore = "writescore.cli.main:cli"

[project.urls]
Homepage = "https://github.com/jmagady/writescore"
Repository = "https://github.com/jmagady/writescore"
Documentation = "https://github.com/jmagady/writescore#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
writescore = ["data/*.json", "data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "accuracy: marks accuracy validation tests",
]
timeout = 300

[tool.coverage.run]
source = ["src/writescore"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/htmlcov/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
