[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "writescore"
version = "6.3.0"
description = "AI writing pattern analysis and scoring tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "BOHICA Labs"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "marko>=2.0.0",
    "nltk>=3.8",
    "spacy>=3.7.0",
    "textstat>=0.7.3",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "textacy>=0.13.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "psutil>=5.9.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "sentence-transformers>=2.0.0",  # Required for figurative_language tests
    "types-PyYAML>=6.0.0",  # Type stubs for PyYAML
]
semantic = [
    "sentence-transformers>=2.0.0",
]
ml = [
    "accelerate>=0.20.0",
    "datasets>=2.14.0",
]

[project.scripts]
writescore = "writescore.cli.main:cli"

[project.urls]
Homepage = "https://github.com/jmagady/writescore"
Repository = "https://github.com/jmagady/writescore"
Documentation = "https://github.com/jmagady/writescore#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
writescore = ["data/*.json", "data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "accuracy: marks accuracy validation tests",
    "performance_local: marks strict performance tests that should only run locally (skipped on CI)",
]
timeout = 300

[tool.coverage.run]
source = ["src/writescore"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/htmlcov/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "SIM108", # ternary operator
    "UP006",  # use builtin types (dict/list/tuple) - pre-existing code style
    "UP035",  # deprecated typing imports - pre-existing code style
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]  # allow assert and magic values in tests

[tool.ruff.lint.isort]
known-first-party = ["writescore"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
# TODO(Story 6.8 Phase 2): Enable stricter checks as type coverage improves
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# check_untyped_defs = true
